[deconz] Add On/Off thermostats (#14636)
* [deconz] Add On/Off thermostats
* further work
* fix regression

Signed-off-by: Jan N. Klug <github@klug.nrw>